# password-policy

./: README.md  pyproject.toml
passvalidate/: __init__.py  password_checker.py
tests/: test_password_checker.py
