[tool.poetry]
name = "passvalidate"
version = "0.1.3"
description = "A configurable password policy checker"
authors = ["Rohan Singh <singhrohan@outlook.com>", "Kayan Irani <kayan.r.irani@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/ygivenx/password-policy"
repository = "https://github.com/ygivenx/password-policy"
keywords = ["password", "security", "policy", "check", "auth", "authentication"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"